--- a/style.css
+++ b/style.css
@@ -14,6 +14,24 @@ body{
     background-attachment: fixed;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+    width: 9px;
+
+
+}
+::-webkit-scrollbar-thumb{
+    background-color: #BD0F97;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #0c010a;
+}
+
+
 /* navbar-styling */
 
 
@@ -35,6 +53,16 @@ ul {
 }
 
 
+ #underline{
+    position: relative;
+    left: 590px;
+    border-radius: 20px;
+    border: 1px solid #eb78d2  ;
+    background-color:#f26ad4 ;
+    height: 8px;
+    width: 100px;
+    margin-top: 20px;
+ }   
 
 
 header h1{
