--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html{
 }
 ::-webkit-scrollbar-thumb{
     background-color: #BD0F97;
+    border-radius: 20px;
 }
 
 ::-webkit-scrollbar-track{
@@ -76,7 +77,7 @@ header h1{
 section{
     background: rgba(84, 78, 78, 0.274);
      border: 1px solid rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
+     box-shadow:  40px rgba(0, 0, 0, 0.1);
      border-radius: 15px;
 }
 
@@ -90,6 +91,27 @@ section{
     color: rgb(255, 255, 255);
         font-family: "Zen Dots", sans-serif;
 }
+
+
+#hero-left i{
+    
+    border-radius: 20px;
+    position: relative;
+    left: 200px;
+    top: 50px;
+    font-size: 50px;
+    transition: 1s;
+
+}
+
+#hero-left i:hover{
+    border-radius: 20px;
+    background-color: #BD0F97;
+    color: white;
+
+}
+
+
 
 /* skills-section styling */
 
